agv_ws/log/build_2024-06-22_03-52-27/movement/stderr.log
  File "/home/vboxuser/agv_ws/install/movement/lib/python3.10/site-packages/movement/wheel_correction_server.py", line 188
    )
    ^
SyntaxError: unmatched ')'

